# nova-os

./: .env.example  .gitignore  IDEAS.md  MOBILE-APP.md  NOVA-LINUX-PROGRESS.md  NOVA-LINUX.md  README.md  RELEASE-10.10.0.md  RELEASE-10.5.2.md  RELEASE-10.6.0.md  RELEASE-10.7.0.md  RELEASE-10.8.0.md  RELEASE-10.9.0.md  TUTORIAL.md  V6_3_DEPLOYMENT.md  capacitor.config.json  firestore.rules  index.html  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
.github/workflows/: android-release.yml  tauri-release.yml
ci/: debug.keystore
nova-linux/: cage-setup.sh  debug-run.sh
public/: manifest.webmanifest  sw.js
scripts/: nova-kiosk-setup.sh
src/: NovaOS.jsx  boot.jsx  firebase.js  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/apps/: AchievementsApp.jsx  AssetStudioApp.jsx  AtlasApp.jsx  AtmosApp.jsx  BrowserApp.jsx  CalculatorApp.jsx  CalendarApp.jsx  CameraApp.jsx  ChatApp.jsx  ChessApp.jsx  ClockApp.jsx  CodeApp.jsx  CryptoApp.jsx  CurrencyApp.jsx  DictionaryApp.jsx  FilesApp.jsx  FlappyBirdApp.jsx  ForumApp.jsx  Game2048App.jsx  MinesweeperApp.jsx  MusicApp.jsx  NotesApp.jsx  NovaAiApp.jsx  PacManApp.jsx  PaintApp.jsx  PdfApp.jsx  PhotosApp.jsx  PongApp.jsx  PosApp.jsx  ProfileApp.jsx  QrApp.jsx  ScreenshotApp.jsx  SettingsApp.jsx  SheetsApp.jsx  SlidesApp.jsx  SnakeApp.jsx  SolitaireApp.jsx  SpaceInvadersApp.jsx  StoreApp.jsx  SudokuApp.jsx  (+10 more)
src/lib/: achievements.js  ai-commands.js  ai-storage.js  ai.js  atmosMusic.js  audio.js  (+36 more)
(+35 files in other folders)
