[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# v7.0.3: shell plugin lets the JS side ask the OS to open URLs/files in the
# user's default app. Used to hand off un-iframable sites to the real browser.
tauri-plugin-shell = "2"
# v8.7: real system metrics (CPU %, RAM) for the System Info widget's desktop
# build. Exposed to the frontend via the `system_info` command in lib.rs.
sysinfo = "0.33"
